# ClienteApi

./: .env.exemple  .gitignore  Dockerfile  LICENSE  README.md  cliente.sqlite  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py
api/app/: __init__.py
api/app/controllers/: __init__.py  auth_controller.py  permission_controller.py  user_controller.py
api/app/guard/: __init__.py  auth_guard.py  owner_guard.py  permission_guard.py
api/app/schemas/: user.py
api/domain/errors/: __init__.py  no_content_error.py  not_found_error.py
api/domain/exceptions/: domain_error.py  no_content_error.py  not_found_error.py
api/domain/interfaces/: __init__.py
api/domain/models/: __init__.py  permission.py  token.py  user.py
api/domain/services/: __init__.py  auth_service.py  permission_service.py  user_service.py
api/infra/: db.py
api/infra/connections/: __init__.py  database.py
api/infra/entities/: __init__.py  user.py
api/infra/repositories/: __init__.py  base_meta.py  user_repository.py
api/utils/http/: __init__.py  responses.py
api/utils/message/: mail.py
api/utils/security/: __init__.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py
app/api/controllers/: __init__.py  (+3 more)
app/controllers/: __init__.py  auth_controller.py  user_controller.py
app/http/: response.py
app/models/: __init__.py  response.py  user.py
app/security/: token.py
app/services/: __init__.py  auth_service.py  user_service.py
app/utils/: crypt.py
migrations/: env.py
migrations/versions/: 241829254414_first_migration.py  ae8a9d07b853_first_migration.py  d57b486fdf3a_unique_email.py
test/: __init__.py  conftest.py
test/controllers/: test_user_controller.py
test/services/: test_user_service.py
(+31 files in other folders)
