[tool.poetry]
name = "usertemplateapi"
version = "0.1.0"
description = ""
authors = ["Davi Lucciola <davilucciola14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
ormar = {extras = ["sqlite"], version = "^0.12.2"}
python-decouple = "^3.8"
email-validator = "^2.0.0.post2"
passlib = "^1.7.4"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
